2010-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Use mktemp with explicit template.

2010-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/i386/bsd.c (grub_bsd_get_device): Fix a memory leak.

2010-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/i386/multiboot_mbi.c (grub_multiboot_set_bootdev): Free the
	right pointer.

2010-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix FreeBSD compilation.

	* Makefile.in (TARGET_CPPFLAGS): Remove -nostdinc -isystem.
	* configure.ac: Add -nostdinc -isystem to TARGET_CPPFLAGS if it works.

2010-03-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Add autogenerated files to MAINTAINER_CLEANFILES.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* gettext/gettext.c (grub_gettext_init_ext): Fix a memory leak.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/scsi.c (grub_scsi_iterate): Fix a memory leak.

2010-03-04  Robert Millan  <rmh.grub@aybabtu.com>

	Support relative image path in theme file.

	* gfxmenu/gui_image.c (grub_gui_image): New member theme_dir.
	(image_set_property): Handle theme_dir and relative path.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Alias amd64 to x86_64.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* NEWS: mention multiboot on EFI.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/main.c (grub_load_modules): Handle errors from init functions of
	embeded modules.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/autofs.c (autoload_fs_module): Handle errors.

2010-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Disable linux.mod on qemu-mips since it's not functional and leads
	to compilation failure.

	* conf/mips.rmk (pkglib_MODULES): Remove linux.mod.
	* conf/mips-yeeloong.rmk (pkglib_MODULES): Add linux.mod.
	* conf/mips.rmk (linux_mod_SOURCES): Move from here ...
	* conf/mips-yeeloong.rmk (linux_mod_SOURCES): ... here